--- a/app/src/main/res/layout/news_list_item.xml
+++ b/app/src/main/res/layout/news_list_item.xml
@@ -16,11 +16,6 @@
         android:layout_height="wrap_content"
         android:textSize="20sp"/>
 
-    <TextView
-        android:id="@+id/image"
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:textSize="20sp"/>
 
     <TextView
         android:id="@+id/desc"
@@ -40,6 +35,8 @@
         android:layout_height="wrap_content"
         android:textSize="20sp"/>
 
+
+
     <View
         android:layout_width="match_parent"
         android:layout_height="1dp"
@@ -48,5 +45,18 @@
         android:layout_marginRight="8dp">
 
     </View>
+
+    <FrameLayout
+        android:layout_width="0dip"
+        android:layout_height="match_parent"
+        android:layout_weight=".2">
+
+        <ImageView
+            android:id="@+id/image"
+            android:layout_width="75dp"
+            android:layout_height="75dp"
+            android:layout_gravity="center"
+            android:src="@color/colorAccent" />
+    </FrameLayout>
 
 </LinearLayout>
