--- a/app/src/main/res/layout/news_list_item.xml
+++ b/app/src/main/res/layout/news_list_item.xml
@@ -2,18 +2,23 @@
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
     android:orientation="vertical"
     android:layout_width="match_parent"
+    android:background="#B3E5FC"
     android:layout_height="wrap_content">
+
+    <!--created Textview for each data and ImageView for displaying image-->
 
     <TextView
         android:id="@+id/author"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
+        android:textColor="#039BE5"
         android:textSize="20sp"/>
 
     <TextView
         android:id="@+id/title"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
+        android:textColor="#009688"
         android:textSize="20sp"/>
 
 
@@ -21,42 +26,40 @@
         android:id="@+id/desc"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:textSize="20sp"/>
+        android:textColor="#616161"
+        android:textSize="18sp"/>
 
-    <TextView
-        android:id="@+id/url"
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:textSize="20sp"/>
+    <!--<TextView-->
+        <!--android:id="@+id/url"-->
+        <!--android:layout_width="match_parent"-->
+        <!--android:layout_height="wrap_content"-->
+        <!--android:textSize="20sp"/>-->
 
     <TextView
         android:id="@+id/date"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:textSize="20sp"/>
+        android:textSize="18sp"/>
 
+    <ImageView
+        android:id="@+id/image"
+        android:layout_width="match_parent"
+        android:layout_height="125dp"
+        android:layout_gravity="center"
+        android:src="@color/colorAccent" />
 
 
     <View
         android:layout_width="match_parent"
         android:layout_height="1dp"
-        android:background="#dadada"
+        android:background="#00897b"
         android:layout_marginLeft="8dp"
         android:layout_marginRight="8dp">
 
     </View>
 
-    <FrameLayout
-        android:layout_width="0dip"
-        android:layout_height="match_parent"
-        android:layout_weight=".2">
 
-        <ImageView
-            android:id="@+id/image"
-            android:layout_width="75dp"
-            android:layout_height="75dp"
-            android:layout_gravity="center"
-            android:src="@color/colorAccent" />
-    </FrameLayout>
+
+
 
 </LinearLayout>
